          of their validity checks (e.g., local moves on triangulations).
        - Updated the SnapPea kernel to the one shipped with SnapPy 3.0.3.
        - Several build dependencies are gone: Jansson, Popt, CppUnit.
          See the individual sections below for details.
    ENGINE:
        Class AbelianGroup:
            - New routine hash(), which uses the tight encoding.
        Class AngleStructures:
            - New routine sort().
        Class BitManipulator<T>:
            - New routine swapBits().
        Class BoolSet:
            - New routine full().
            - Renamed empty() to clear(), without a deprecated alias, to avoid
              confusion with the more common pattern where empty() queries
              whether or not a container is empty.
        Enum ChangeType:
            - New enum for internal use with triangulation change spans.
        Class Example<3>:
            - Routines lst(), lens(), augTriSolidTorus() and sfsOverSphere()
              now check their preconditions and throw an exception if they fail.
            - Renamed cuspedGenusTwoTorus() to idealGenusTwoHandlebody().
              The old name has been kept as a deprecated alias.
        Class Face<dim, dim-1>:
            - New routines lock(), unlock(), and isLocked().
        Class FacetPairing<dim>:
            - New routine hash(), which uses the tight encoding.
        Class FacetSpec<dim>:
            - New routine hash(), which uses the tight encoding.
        Class Flags<T>:
            - New operator bool(), which tests for a non-empty flag set.
        Class HomologicalData:
            - New routine triangulation().
        Class Integer:
            - New routine hash(), which hashes the integer down to a size_t.
            - New routine str(), which is an alias for stringValue().
            - New class constant supportsInfinity, which is set to false.
        Class IntOfBits<k>: